--- a/exercicios/ex019/style.css
+++ b/exercicios/ex019/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 /*
     em HTML é id = em CSS é # (só pode um elemento)
@@ -6,37 +6,37 @@
 */
 
 body {
-    background-color: rgb(188, 255, 192);
-    font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(188, 255, 192);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: rgb(0, 58, 8);
+  color: rgb(0, 58, 8);
 }
 
 h1#principal {
-    text-align: center;
-    background-color: rgb(0, 73, 28);
-    color: white;
+  text-align: center;
+  background-color: rgb(0, 73, 28);
+  color: white;
 }
 
 h2 {
-    color: rgb(24, 80, 46);
+  color: rgb(24, 80, 46);
 }
 
 .basico {
- color: aqua;
- font-weight: bold;
+  color: aqua;
+  font-weight: bold;
 }
 
 .intermediario {
-    color: rgb(217, 255, 0);
+  color: rgb(217, 255, 0);
 }
 
 .avançado {
-    color: rgb(111, 0, 255);
+  color: rgb(111, 0, 255);
 }
 
 .destaque {
-    background-color: brown;
+  background-color: brown;
 }
