--- a/exercicios/desafios/desafiocordel/style.css
+++ b/exercicios/desafios/desafiocordel/style.css
@@ -1,3 +1,50 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
+
+body {
+  background-color: black;
+}
+
+header {
+  background-color: black;
+  margin: auto;
+  padding: 10px;
+}
+
+header > p {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-family: var(--fonte-logo);
+  
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 8em;
+  font-family: var(--fonte-logo);
+  margin: auto;
+}
+
+
+
+main {
+  background-color: white;
+  font-size: 5em;
+  font-family: var(--fonte-destaque);
+  padding-left: 30px;
+  padding-top: 30px;
+  font-weight: bold;
+}
+
+:root {
+  
+  --fonte-logo: "Sigmar", cursive;
+  --fonte-destaque: "Lobster", cursive;
+}
