--- a/exercicios/desafios/desafiocordel/style.css
+++ b/exercicios/desafios/desafiocordel/style.css
@@ -1,10 +1,13 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Sigmar&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 
-
+* {
+  margin: 0px;
+  padding: 0px;
+}
 
 body {
   background-color: black;
@@ -13,7 +16,7 @@ body {
 header {
   background-color: black;
   margin: auto;
-  padding: 10px;
+  padding: 40px;
 }
 
 header > p {
@@ -21,30 +24,92 @@ header > p {
   text-align: center;
   text-decoration: none;
   font-family: var(--fonte-logo);
-  
+}
+
+header a {
+  text-decoration: none;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
   color: white;
   text-align: center;
-  font-size: 8em;
+  font-size: 6em;
   font-family: var(--fonte-logo);
   margin: auto;
 }
 
-
-
 main {
   background-color: white;
-  font-size: 5em;
+  font-size: 3.5em;
   font-family: var(--fonte-destaque);
-  padding-left: 30px;
-  padding-top: 30px;
+  padding-bottom: 50px;
+  padding-top: 50px;
   font-weight: bold;
 }
 
 :root {
-  
   --fonte-logo: "Sigmar", cursive;
-  --fonte-destaque: "Lobster", cursive;
+  --fonte-destaque: "Shadows Into Light", cursive;
+}
+
+div.um {
+  padding-bottom: 100px;
+  padding-left: 40px;
+}
+
+div.img {
+  color: white;
+  background-image: url("imagens/planta.jpg");
+  background-size: 100% 100%;
+  padding-top: 50px;
+  padding-left: 40px;
+  padding-bottom: 100px;
+}
+
+div.safe {
+  max-width: 40%;
+  background-color: rgba(0, 0, 0, 0.432);
+  padding: 20px;
+}
+
+div.dois {
+  padding-top: 70px;
+  padding-bottom: 100px;
+  padding-left: 40px;
+}
+
+div.imgdois {
+  color: white;
+  background-image: url("imagens/livro.jpg");
+  background-size: 100% 100%;
+  padding-top: 50px;
+  padding-left: 40px;
+  padding-bottom: 100px;
+}
+
+div.safedois {
+  max-width: 50%;
+  background-color: rgba(0, 0, 0, 0.432);
+  padding: 20px;
+}
+
+div.tres {
+  padding-top: 70px;
+  padding-bottom: 100px;
+  padding-left: 40px;
+}
+
+footer {
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
 }
