--- a/exercicios/desafios/desafiocordel/style.css
+++ b/exercicios/desafios/desafiocordel/style.css
@@ -10,6 +10,8 @@
 }
 
 body {
+  width: 100%;
+  margin: auto;
   background-color: black;
 }
 
@@ -42,11 +44,12 @@ h1 {
 
 main {
   background-color: white;
-  font-size: 3.5em;
+  font-size: 3em;
   font-family: var(--fonte-destaque);
   padding-bottom: 50px;
   padding-top: 50px;
   font-weight: bold;
+  
 }
 
 :root {
@@ -57,21 +60,29 @@ main {
 div.um {
   padding-bottom: 100px;
   padding-left: 40px;
+  margin: auto;
 }
 
 div.img {
   color: white;
   background-image: url("imagens/planta.jpg");
-  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
   padding-top: 50px;
   padding-left: 40px;
   padding-bottom: 100px;
+  
 }
 
 div.safe {
-  max-width: 40%;
+  max-width: flex;
   background-color: rgba(0, 0, 0, 0.432);
   padding: 20px;
+  max-width: 40%;
+  margin-right: auto;
+  
 }
 
 div.dois {
@@ -83,16 +94,20 @@ div.dois {
 div.imgdois {
   color: white;
   background-image: url("imagens/livro.jpg");
-  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center center;
   padding-top: 50px;
   padding-left: 40px;
   padding-bottom: 100px;
 }
 
 div.safedois {
-  max-width: 50%;
+  max-width: 40%;
   background-color: rgba(0, 0, 0, 0.432);
   padding: 20px;
+  margin-right: auto;
 }
 
 div.tres {
