--- a/exercicios/desafios/d012/style.css
+++ b/exercicios/desafios/d012/style.css
@@ -7,11 +7,11 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-size: 1em;
 }
 
-body {
-  width: 100%;
-  margin: auto;
+html, body {
+  min-height: 100vh;
   background-color: black;
 }
 
@@ -37,14 +37,14 @@ header a {
 h1 {
   color: white;
   text-align: center;
-  font-size: 6em;
+  font-size: 10vw;
   font-family: var(--fonte-logo);
   margin: auto;
 }
 
 main {
   background-color: white;
-  font-size: 3em;
+  font-size: 3.5vw;
   font-family: var(--fonte-destaque);
   padding-bottom: 50px;
   padding-top: 50px;
@@ -75,12 +75,9 @@ div.img {
 }
 
 div.safe {
-  max-width: 40%;
-  max-height: 40%;
+  display: inline-block;
   background-color: rgba(0, 0, 0, 0.432);
-  padding: 20px;
-  max-width: 40%;
-  margin-right: auto;
+  padding: 5px;
 }
 
 div.dois {
@@ -102,10 +99,9 @@ div.imgdois {
 }
 
 div.safedois {
-  max-width: 40%;
+  display: inline-block;
   background-color: rgba(0, 0, 0, 0.432);
-  padding: 20px;
-  margin-right: auto;
+  padding: 5px;
 }
 
 div.tres {
@@ -119,7 +115,7 @@ footer {
   text-align: center;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1.5em;
+  font-size: 3.5vw;
 }
 
 footer a {
