--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -2,18 +2,18 @@
 
 /* Configurações gerais */
 
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
 
-html,body {
+html,
+body {
   width: 100vw;
   height: 100vh;
   background-color: #233eff;
   background-size: contain;
   background-repeat: no-repeat;
-  
 }
 
 h1 {
